# obsidian-agent

./: .dockerignore  .editorconfig  .gitignore  .gitmodules  .npmignore  .prettierrc.json  .shellcheckrc  .zshrc-workspace  .zshrc-wrap  ARCHITECTURE.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CLAUSIDIAN_README.md  CONTRIBUTING.md  DASHBOARD-DEPLOYMENT-GUIDE.md  Dockerfile  EXECUTION-REPORT.md  FAQ-TROUBLESHOOTING.md  FRONTEND_SETUP.md  GETTING_STARTED.md  IMPLEMENTATION_ROADMAP.md  INITIATIVES_PROGRESS_2026Q2.md  PRODUCTION-SETUP.md  PROJECTS_INFO.md  PROJECT_STATUS.md  README.md  SCRIPT_STYLE.md  SESSION-WRAP-QUICKSTART.md  SKILL.md  TESTING.md  UNIT2_OPTIMIZATION.md  UNIT3_SUMMARY.md  UNIT7_OPTIMIZATION.md  UPGRADE_SUMMARY.md  VWRS_8_1_SUMMARY.txt  VWRS_PHASE_8_1_PROGRESS.md  WORKSPACE.md  WORKSPACE_AUDIT_20260331.md  health.sh  (+10 more)
docs/: API.md  (+19 more)
projects/experimental/NS_0327/: .env.example  .gitignore  CHANGELOG.md  Dockerfile  README.md  config.example.json  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh
projects/experimental/NS_0327/dev/specs/2026-03-27_1_hr-admin-bot-package/: s0_brief_spec.md  s0_requirement_input.md  s1_dev_spec.md
projects/experimental/NS_0327/src/hr_admin_bots/: cli.py  config.py  constants.py  health.py  manager.py  mcp_server.py  scheduler.py  smart.py
projects/experimental/NS_0327/tests/: test_approval.py  test_audit.py  test_auth.py  test_bot_flows.py  test_bots.py  test_cli.py  test_config.py  test_health.py  test_manager.py  test_mcp.py  test_notifier.py  test_scheduler.py  test_sheets.py  test_smart.py  test_webhook.py
(+1333 files in other folders)
